--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -366,11 +366,11 @@ xh5_define("plugins.techcharts", ["utils.util", "utils.painter"], function(t, i)
             var a = this.gdsd(i)
               , r = this.customArr[0].v
               , o = this.customArr[1].v
-              , n = s(a, this.tkProp.close)
-              , c = e(n, r)
-              , f = l(h(n, r), o, "*")
-              , d = l(c, f, "+")
-              , u = l(c, f, "-");
+              , n = getArr(a, this.tkProp.close)
+              , c = calcMA(n, r)
+              , f = operateArr(calcSTD(n, r), o, "*")
+              , d = operateArr(c, f, "+")
+              , u = operateArr(c, f, "-");
             this.oriArr = a,
             this.datas ? t.ca(this.datas) : this.datas = [],
             t.ca(this.selfArr);
