--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -444,12 +444,12 @@ xh5_define("plugins.techcharts", ["utils.util", "utils.painter"], function(t, i)
           , l = Ot.getArr;
         this.initAndCalcAll = function(i) {
             var a = this.customArr
-              , r = a[0].v
-              , o = l(i, "close")
-              , n = l(i, "high")
-              , c = l(i, "low")
-              , f = h(h(h(n, c, "+"), o, "+"), 3, "/")
-              , d = h(h(f, e(f, r), "-"), h(s(f, r), .015, "*"), "/");
+              , r = 14
+              , o = getArr(i, "close")
+              , n = getArr(i, "high")
+              , c = getArr(i, "low")
+              , f = operateArr(operateArr(operateArr(n, c, "+"), o, "+"), 3, "/")
+              , d = operateArr(operateArr(f, calcMA(f, r), "-"), operateArr(calcAVEDEV(f, r), .015, "*"), "/");
             this.oriArr = i,
             !this.datas && (this.datas = []),
             t.ca(this.selfArr);
