add dma calc function

--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -679,11 +679,11 @@ xh5_define("plugins.techcharts", ["utils.util", "utils.painter"], function(t, i)
           , h = Ot.getArr;
         this.initAndCalcAll = function(i) {
             var a = this.gdsd(i)
-              , r = h(a, this.tkProp.close)
-              , l = s(r, this.customArr[0].v)
-              , o = s(r, this.customArr[1].v)
-              , n = e(l, o, "-")
-              , c = s(n, this.customArr[2].v);
+              , r = getArr(a, this.tkProp.close)
+              , l = calcMA(r, 10)
+              , o = calcMA(r, 50)
+              , n = operateArr(l, o, "-")
+              , c = calcMA(n, 10);
             this.oriArr = a,
             this.datas ? t.ca(this.datas) : this.datas = [],
             t.ca(this.selfArr);
