add DMI calc function

--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -726,17 +726,25 @@ xh5_define("plugins.techcharts", ["utils.util", "utils.painter"], function(t, i)
           , o = Ot.getArr
           , n = Ot.operateArr;
         this.initAndCalcAll = function(i) {
-            for (var a, r, c = this.customArr[0].v, f = this.customArr[1].v, d = o(i, "close"), u = o(i, "high"), A = o(i, "low"), p = s(e(e(n(u, A, "-"), h(n(u, l(d, 1), "-"))), h(n(A, l(d, 1), "-"))), c), v = n(u, l(u, 1), "-"), g = n(l(A, 1), A, "-"), m = [], b = [], w = 0, y = v.length; y > w; w++)
-                a = v[w],
-                r = g[w],
+            for (var a, r, 
+c = 14, 
+f = 6, 
+d = getArr(i, "close"), 
+u = getArr(i, "high"), 
+A = getArr(i, "low"), 
+p = calcEMA(calcMAX(calcMAX(operateArr(u, A, "-"), calcABS(operateArr(u, calcREF(d, 1), "-"))), calcABS(operateArr(A, calcREF(d, 1), "-"))), c), 
+v = operateArr(u, calcREF(u, 1), "-"), 
+g = operateArr(calcREF(A, 1), A, "-"), m = [], b = [], w = 0, y = v.length; y > w; w++)
+                a = v[w],//upMove
+                r = g[w],//downMove
                 m.push(a > 0 && a > r ? a : 0),
                 b.push(r > 0 && r > a ? r : 0);
-            m = s(m, c),
-            b = s(b, c);
-            var D = n(n(m, 100, "*"), p, "/")
-              , M = n(n(b, 100, "*"), p, "/")
-              , N = s(n(n(h(n(M, D, "-")), n(M, D, "+"), "/"), 100, "*"), f)
-              , O = s(N, f);
+            m = calcEMA(m, 14),
+            b = calcEMA(b, 14);
+            var D = operateArr(operateArr(m, 100, "*"), p, "/")
+              , M = operateArr(operateArr(b, 100, "*"), p, "/")
+              , N = calcEMA(operateArr(operateArr(calcABS(operateArr(M, D, "-")), operateArr(M, D, "+"), "/"), 100, "*"), 6)
+              , O = calcEMA(N, 6);
             this.oriArr = i,
             !this.datas && (this.datas = []),
             t.ca(this.selfArr);
