add EMV calc function

--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -976,17 +976,17 @@ g = operateArr(calcREF(A, 1), A, "-"), m = [], b = [], w = 0, y = v.length; y > 
           , l = Ot.operateArr;
         this.initAndCalcAll = function(i) {
             var a = this.customArr
-              , r = a[0].v
-              , o = a[1].v
-              , n = h(i, "high")
-              , c = h(i, "low")
-              , f = h(i, "volume")
-              , d = l(s(f, r), f, "/")
-              , u = l(n, c, "+")
-              , A = l(n, c, "-")
-              , p = l(l(l(u, e(u, 1), "-"), u, "/"), 100, "*")
-              , v = s(l(l(l(p, d, "*"), A, "*"), s(A, r), "/"), r)
-              , g = s(v, o);
+              , r = 14
+              , o = 9
+              , n = getArr(i, "high")
+              , c = getArr(i, "low")
+              , f = getArr(i, "volume")
+              , d = operateArr(calcMA(f, 14), f, "/")
+              , u = operateArr(n, c, "+")
+              , A = operateArr(n, c, "-")
+              , p = operateArr(operateArr(operateArr(u, calcREF(u, 1), "-"), u, "/"), 100, "*")
+              , v = calcMA(operateArr(operateArr(operateArr(p, d, "*"), A, "*"), calcMA(A, 14), "/"), 14)
+              , g = calcMA(v, 9);
             this.oriArr = i,
             !this.datas && (this.datas = []),
             t.ca(this.selfArr);
