add EXPMA calc function

--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -1743,8 +1743,8 @@ g = operateArr(calcREF(A, 1), A, "-"), m = [], b = [], w = 0, y = v.length; y > 
             this.oriArr = a,
             this.datas ? t.ca(this.datas) : this.datas = [],
             t.ca(this.selfArr);
-            for (var r = o(a, this.tkProp.close), s = [], e = 0, h = this.customArr.length; h > e; e++)
-                s.push(n(r, this.customArr[e].v));
+            for (var r = getArr(a, "close"), s = [], e = 0, h = this.customArr.length; h > e; e++)
+                s.push(calcEMA(r, this.customArr[e].v));
             for (var c = a.length, f = 0, d = s.length; d > f; f++)
                 for (var u = this.customArr[f].v, A = 0; c > A; A++) {
                     var p = this.selfArr[A] = this.selfArr[A] || {};
