add VR indicator calc function

--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -4502,15 +4502,18 @@ g = operateArr(calcREF(A, 1), A, "-"), m = [], b = [], w = 0, y = v.length; y > 
           , l = Ot.getArr
           , o = Ot.operateArr;
         this.initAndCalcAll = function(i) {
-            for (var a = this.gdsd(i), r = this.customArr[0].v, n = this.customArr[1].v, c = l(a, this.tkProp.close), f = l(a, "volume"), d = h(c, 1), u = [], A = [], p = [], v = 0, g = c.length; g > v; v++)
+            for (var a = this.gdsd(i), 
+r = this.customArr[0].v, 
+n = this.customArr[1].v, 
+c = getArr(a, this.tkProp.close), f = getArr(a, "volume"), d = calcREF(c, 1), u = [], A = [], p = [], v = 0, g = c.length; g > v; v++)
                 u.push(c[v] > d[v] ? f[v] : 0),
                 A.push(c[v] < d[v] ? f[v] : 0),
                 p.push(c[v] == d[v] ? f[v] : 0);
-            u = e(u, r),
-            A = e(A, r),
-            p = e(p, r);
-            var m = o(o(o(o(u, 2, "*"), p, "+"), 100, "*"), o(o(A, 2, "*"), p, "+"), "/")
-              , b = s(m, n);
+            u = calcSUM(u, r),
+            A = calcSUM(A, r),
+            p = calcSUM(p, r);
+            var m = operateArr(operateArr(operateArr(operateArr(u, 2, "*"), p, "+"), 100, "*"), operateArr(operateArr(A, 2, "*"), p, "+"), "/")
+              , b = calcMA(m, 6);
             this.oriArr = a,
             this.datas ? t.ca(this.datas) : this.datas = [],
             t.ca(this.selfArr);
