add TRIX indicator calc function

--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -3855,13 +3855,13 @@ g = operateArr(calcREF(A, 1), A, "-"), m = [], b = [], w = 0, y = v.length; y > 
           , o = Ot.calcREF;
         this.initAndCalcAll = function(i) {
             var a = this.gdsd(i)
-              , r = this.customArr[0].v
-              , n = this.customArr[1].v
-              , c = h(a, this.tkProp.close)
-              , f = e(e(e(c, r), r), r)
-              , d = o(f, 1)
-              , u = l(l(l(f, d, "-"), d, "/"), 100, "*")
-              , A = s(u, n);
+              , r = 12
+              , n = 9
+              , c = getArr(a, this.tkProp.close)
+              , f = calcEMA(calcEMA(calcEMA(c, r), r), r)
+              , d = calcREF(f, 1)
+              , u = operateArr(operateArr(operateArr(f, d, "-"), d, "/"), 100, "*")
+              , A = calcMA(u, n);
             this.oriArr = a,
             this.datas ? t.ca(this.datas) : this.datas = [],
             t.ca(this.selfArr);
