add WVAD indicator calc function

--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -4598,8 +4598,8 @@ c = getArr(a, this.tkProp.close), f = getArr(a, "volume"), d = calcREF(c, 1), u 
               , f = l(i, "high")
               , d = l(i, "low")
               , u = l(i, "volume")
-              , A = h(s(h(h(h(n, c, "-"), h(f, d, "-"), "/"), u, "*"), r), 1e4, "/")
-              , p = e(A, o);
+              , A = operateArr(calcSUM(operateArr(operateArr(operateArr(n, c, "-"), operateArr(f, d, "-"), "/"), u, "*"), r), 1e4, "/")
+              , p = calcMA(A, o);
             this.oriArr = i,
             !this.datas && (this.datas = []),
             t.ca(this.selfArr);
