add ROC indicator calc function

--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -3233,11 +3233,11 @@ g = operateArr(calcREF(A, 1), A, "-"), m = [], b = [], w = 0, y = v.length; y > 
           , l = Ot.operateArr;
         this.initAndCalcAll = function(i) {
             var a = this.gdsd(i)
-              , r = this.customArr[0].v
-              , o = this.customArr[1].v
-              , n = h(a, this.tkProp.close)
-              , c = l(l(l(n, e(n, r), "-"), 100, "*"), e(n, r), "/")
-              , f = s(c, o);
+              , r = 12
+              , o = 6
+              , n = getArr(a, this.tkProp.close)
+              , c = operateArr(operateArr(operateArr(n, calcREF(n, r), "-"), 100, "*"), calcREF(n, r), "/")
+              , f = calcMA(c, o);
             this.oriArr = a,
             this.datas ? t.ca(this.datas) : this.datas = [],
             t.ca(this.selfArr);
