add PSY indicator calc function

--- a/assets/新浪指标计算.md
+++ b/assets/新浪指标计算.md
@@ -3035,8 +3035,8 @@ g = operateArr(calcREF(A, 1), A, "-"), m = [], b = [], w = 0, y = v.length; y > 
             this.oriArr = i,
             !this.datas && (this.datas = []),
             t.ca(this.selfArr);
-            var a = this.customArr[0].v
-              , r = this.customArr[1].v
+            var a = 12
+              , r = 6
               , s = i[0]
               , e = isNaN(s.prevclose) || s.prevclose < s.close ? 1 : 0
               , h = e
